ast_theme customized to coordinator preferences

--- a/web/themes/custom/ast_theme/sass/_slider.scss
+++ b/web/themes/custom/ast_theme/sass/_slider.scss
@@ -22,7 +22,7 @@
 	    line-height: 150%;
 	    color: #fff;
 	    padding: 20px;
-	    background: rgb(101, 183, 238);
+	    background: rgba(30, 143, 255, 0.603);
 	    @include border-radius(5px);
 	}
 
@@ -86,7 +86,7 @@
 	    @include border-radius(50%);
 
 	    &.flex-active{
-			background: #c600ff;
+			background: #FF0000;
 	    }
 	}
 
