--- a/web/themes/custom/ast_theme/sass/_variables-and-mixins.scss
+++ b/web/themes/custom/ast_theme/sass/_variables-and-mixins.scss
@@ -7,8 +7,8 @@ $baseFontSize: 14px;
 $bodyBGColor: #f9f9f9;
 $baseFontColor: #435a6b;
 
-$linkColor: #ff0000;
-$linkColorHover: #ff0000;
+$linkColor: #006400;
+$linkColorHover: #006400;
 
 /*Header*/
 $headerBGColor: #000;
