--- a/web/themes/custom/ast_theme/sass/_header.scss
+++ b/web/themes/custom/ast_theme/sass/_header.scss
@@ -119,7 +119,7 @@
 	}
 
 	input.form-submit{
-		background: image-url("search.png") no-repeat center $linkColor;
+		background: image-url("search.png") no-repeat center #FF0000;
 		font-size: 0;
 		width: 100%;
 		height: 30px;
@@ -128,8 +128,8 @@
 		@include border-radius(0 20px 20px 0);
 
 		&:hover{
-			background-color: $linkColorHover;
-			border-color: $linkColorHover;
+			background-color: #FF0000;
+			border-color: #FF0000;
 		}
 	}
 
