color modifications in the ast_theme

--- a/web/themes/custom/ast_theme/sass/_home.scss
+++ b/web/themes/custom/ast_theme/sass/_home.scss
@@ -1,10 +1,3 @@
-/*Bottom Widgets*/
-
-.bottom-widget{
-	background: #fff;
-
-	h2.title, *{
-	  color: #b35454;
-	}
-
+h2.title, *{
+  color: #000000;
 }
