--- a/web/themes/custom/ast_theme/sass/global.scss
+++ b/web/themes/custom/ast_theme/sass/global.scss
@@ -7,8 +7,13 @@
 					support@zymphonies.com
 **/
 
+@import "compass/reset";
 @import "compass/css3";
 @import "variables-and-mixins";
+@import "base";
+@import "typhography";
+@import "global-styles";
 @import "home.scss";
 @import "header";
 @import "slider";
+@import "pages";
