--- a/web/themes/custom/ast_theme/sass/_header.scss
+++ b/web/themes/custom/ast_theme/sass/_header.scss
@@ -1,17 +1,13 @@
+.top-nav{
+	background: $linkColor;
+}
 
+#search-block-form{
 	input.form-submit{
 		background: image-url("search.png") no-repeat center #FF0000;
-		font-size: 0;
-		width: 100%;
-		height: 30px;
-		padding: 0 20px;
-		vertical-align: top;
-		@include border-radius(0 20px 20px 0);
-
 		&:hover{
-			background-color: #FF0000;
-			border-color: #FF0000;
-			background-color: $linkColorHover;
-			border-color: $linkColorHover;
+		background-color: #FF0000;
+		border-color: #FF0000;
 		}
-	}
+	} 
+}
