--- a/web/themes/custom/ast_theme/sass/media.scss
+++ b/web/themes/custom/ast_theme/sass/media.scss
@@ -1,12 +1,19 @@
+@import "variables-and-mixins";
+
+@media (min-width: 767px) {
   /*flexslider*/
 
-.flexslider {
+  .region-primary-menu{
+    ul{
+      ul{
 
-  li a:hover,
-  li a:focus,
-  li a:active,
-  li a.highlighted{
-    color: #ffa4a1;
-    padding: 18px 15px;
+        li a:hover,
+        li a:focus,
+        li a:active,
+        li a.highlighted{
+          color: #ffa1a1;
+        }
+      }      
+    } 
   }
 }
