--- a/web/themes/custom/ast_theme/templates/views/views-view--featured_in_home.html.twig
+++ b/web/themes/custom/ast_theme/templates/views/views-view--featured_in_home.html.twig
@@ -18,40 +18,21 @@
  * @ingroup themeable
  */
 #}
-{#
 
-  <div class="container">
-    <div class="flexslider">
-      <ul class="slides">
-        {% for slider_contents in slider_content %}
-          {{ slider_contents | raw }}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-#}
-{% if attributes -%}
-  <div{{ attributes }}>
-{% endif %}
-  {% if title %}
-    <h3>{{ title }}</h3>
-  {% endif %}
-
-  <{{ list.type }} {{ list.attributes }} {{ list.type == 'ul' ? 'class="arrow_list"' : ''}} >
-
+<div class="container">
+  <div class="flexslider">
+    <ul class="slides arrow_list">
     {% for row in rows %}
-    <li>
-      <img src="' . $path . '" alt="Slider Banner" />
-      <div class="slider-caption">
-        <h2 class="slider-title">' . theme_get_setting('slide_title_' . $i, 'school_zymphonies_theme').'</h2>
-        <div class="clearfix"><p class="slider-description">' . theme_get_setting('slide_description_' . $i, 'school_zymphonies_theme').'</p></div>
-        <a href=' . theme_get_setting('slide_url_' . $i, 'school_zymphonies_theme') . ' class="more-link">Read more</a>
-      </div>
-    </li>';
+      <li>
+        <img src="http://ast.docker.local/themes/contrib/school_zymphonies_theme/images/slider/slide_01.jpg" alt="Variveis da foto aqui" />
+        <div class="slider-caption">
+          <h2 class="slider-title">Inserir a variavel de título aqui</h2>
+          <div class="clearfix"><p class="slider-description">Inserir as variável de descrição aqui</p></div>
+          <a href='https://google.com' class="more-link">Leia mais</a>
+        </div>
+      </li>
     {% endfor %}
-
-  </{{ list.type }}>
-
-{% if attributes -%}
+    </ul>
   </div>
-{% endif %}
+</div>
+
